swagger all data user
